--- a/styles.css
+++ b/styles.css
@@ -30,22 +30,24 @@
     box-sizing: border-box;
 }
 
-html,body{
-    height:100%
+html, body {
+    height: 100%
 }
+
 body {
     background-color: var(--very-pale-blue);
     text-align: center;
-    position:relative;
+    position: relative;
 }
 
 .header {
-    background-image: url("images/pattern-circles.svg"),url("images/bg-pattern.svg");
-    background-position: center,center;
-    background-repeat: no-repeat,no-repeat;
-    padding:10rem;
+    background-image: url("images/pattern-circles.svg"), url("images/bg-pattern.svg");
+    background-position: center, center;
+    background-repeat: no-repeat, no-repeat;
+    padding: 10rem;
 }
-.title-disc{
+
+.title-disc {
     display: flex;
     justify-content: center;
 }
@@ -60,6 +62,8 @@ body {
     max-width: 44rem;
     min-height: 20rem;
     margin: 0 auto;
+    box-shadow: 10px 10px 10px lightgrey;
+    padding: 2rem 5rem;
 }
 
 .card-top {
@@ -73,7 +77,7 @@ body {
     grid-row: 1;
 }
 
-.pricing-range {
+.price-range {
     grid-column: 1/3;
     grid-row: 2;
 }
