--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@
 
 * {
     font-family: 'Manrope', sans-serif;
+    color: var(--grayish-blue);
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -45,6 +46,11 @@ body {
     background-position: center, center;
     background-repeat: no-repeat, no-repeat;
     padding: 10rem;
+}
+
+.title h1 {
+    color: var(--dark-desaturated-blue);
+    font-size: 1.8rem;
 }
 
 .title-disc {
@@ -75,13 +81,52 @@ body {
 .pv-container {
     grid-column: 1/2;
     grid-row: 1;
+    text-transform: uppercase;
 }
-
-.price-range {
+.price-range-container{
     grid-column: 1/3;
     grid-row: 2;
+    position: relative;
+ 
+}
+.price-range {
+    position: absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;    
+    appearance: none;
+    width:100%;
+    height:1rem;
+    border-radius: 5px;
+    outline: none;
+    opacity: 0.7;
+    background:var(--lighter-grayish-blue);
 }
 
+.price-range::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 35px;
+    height: 35px;
+    border-radius: 15px;
+    cursor: pointer;
+    background:var(--strong-cyan) url("images/icon-slider.svg") no-repeat center;
+}
+.hold::-webkit-slider-thumb{
+    background:red;
+}
+.range-filled{
+    position: absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    width:50%;
+    height:1rem;
+    border-radius: 5px;
+    background:var(--soft-cyan);
+}
 .price-container {
     grid-column: 2/3;
     grid-row: 1;
@@ -90,6 +135,15 @@ body {
 .billing {
     grid-column: 1/3;
     grid-row: 3;
+}
+
+.discount {
+    background-color: var(--light-grayish-red);
+    color: var(--light-red);
+    font-size: 10px;
+    padding: 5px;
+    margin: 0 5px;
+    border-radius: 20px;
 }
 
 .card-bottom {
