--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-size: 15px;
 }
 
 html, body {
@@ -59,19 +60,24 @@ body {
 }
 
 .card {
+    display: flex;
+    flex-direction: column;
     position: absolute;
     right: 0;
     left: 0;
     top: calc(50% - 10.25rem);
-    border: chocolate solid;
+    border-radius: 10px;
     background-color: var(--white);
     max-width: 44rem;
     min-height: 20rem;
     margin: 0 auto;
     box-shadow: 10px 10px 10px lightgrey;
-    padding: 2rem 5rem;
+    padding: 3rem 0;
 }
-
+.card-top,.card-bottom{
+    width: 500px;
+    align-self: center;
+}
 .card-top {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -82,26 +88,29 @@ body {
     grid-column: 1/2;
     grid-row: 1;
     text-transform: uppercase;
+    letter-spacing: 1.5px;
+    font-weight: 800;
 }
-.price-range-container{
+
+.price-range-container {
     grid-column: 1/3;
     grid-row: 2;
     position: relative;
- 
 }
+
 .price-range {
     position: absolute;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;    
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     appearance: none;
-    width:100%;
-    height:1rem;
+    width: 100%;
+    height: 1rem;
     border-radius: 5px;
     outline: none;
     opacity: 0.7;
-    background:var(--lighter-grayish-blue);
+    background: var(--lighter-grayish-blue);
 }
 
 .price-range::-webkit-slider-thumb {
@@ -111,30 +120,87 @@ body {
     height: 35px;
     border-radius: 15px;
     cursor: pointer;
-    background:var(--strong-cyan) url("images/icon-slider.svg") no-repeat center;
+    background: var(--strong-cyan) url("images/icon-slider.svg") no-repeat center;
 }
-.hold::-webkit-slider-thumb{
-    background:red;
+
+.hold::-webkit-slider-thumb {
+    background: red;
 }
-.range-filled{
+
+.range-filled {
     position: absolute;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-    width:50%;
-    height:1rem;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 50%;
+    height: 1rem;
     border-radius: 5px;
-    background:var(--soft-cyan);
+    background: var(--soft-cyan);
 }
+
 .price-container {
     grid-column: 2/3;
     grid-row: 1;
+    font-weight:800;
+}
+.price{
+    color:var(--dark-desaturated-blue);
+    font-size: 38px;
 }
 
 .billing {
     grid-column: 1/3;
     grid-row: 3;
+    margin: 0 auto;
+}
+
+.yearly_flg_container {
+    display: flex;
+    font-size: 12px;
+    position: relative;
+}
+
+.yearly_flg_toggle {
+    width: 42px;
+    height: 21px;
+    background: var(--light-grayish-blue);
+    border-radius: 16px;
+    /* position: relative; */
+    cursor: pointer;
+    display: flex;
+    /* justify-items: center; */
+    align-items: center;
+    padding: 0 3px;
+    margin: 0px 15px;
+}
+.yearly_flg_toggle:checked{
+    background: var(--strong-cyan);
+    
+}
+
+/* .yearly_flg_toggle:before {
+    content:"";
+    width: 1rem;
+    height: 1rem;
+    background: pink;
+} */
+
+#yearly_flg {
+    appearance: none;
+    width: 14px;
+    height: 14px;
+    border-radius: 14px;
+    background: var(--white);
+    /* transform: translateX(-10px); */
+    /* position: absolute; */
+    /* top: 2px; */
+    /* left: 12px; */
+    cursor: pointer;
+    outline: none;
+}
+#yearly_flg:checked{
+    transform: translateX(21px);
 }
 
 .discount {
@@ -144,9 +210,30 @@ body {
     padding: 5px;
     margin: 0 5px;
     border-radius: 20px;
+    position: absolute;
+    right: -100px;
 }
-
+hr{
+    border: var(--grayish-blue) solid 1px;
+    margin: 20px 0;
+}
 .card-bottom {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+}
+.card-bottom *{
+    font-size: 12px;
+}
+.card-bottom ul{
+    list-style-type: none;
+    text-align-last: left;
+}
+button{
+    background:var(--dark-desaturated-blue);
+    width: 150px;
+    height: 40px;
+    border-radius: 25px;
+    border:none;
+    color:var(--pale-blue);
+    cursor: pointer;
 }
