--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-size: 15px;
 }
 
 html, body {
@@ -40,11 +39,13 @@ body {
     background-color: var(--very-pale-blue);
     text-align: center;
     position: relative;
+    font-size: 15px;
+
 }
 
 .header {
     background-image: url("images/pattern-circles.svg"), url("images/bg-pattern.svg");
-    background-position: center, center;
+    background-position: center,  left bottom;
     background-repeat: no-repeat, no-repeat;
     padding: 10rem;
 }
@@ -69,14 +70,14 @@ body {
     top: calc(50% - 10.25rem);
     border-radius: 10px;
     background-color: var(--white);
-    max-width: 44rem;
-    min-height: 20rem;
+    max-width: 540px;
+    max-height: 400px;
     margin: 0 auto;
     box-shadow: 10px 10px 10px lightgrey;
-    padding: 3rem 0;
+    padding: 25px 0;
 }
 .card-top,.card-bottom{
-    width: 500px;
+    width: 445px;
     align-self: center;
 }
 .card-top {
@@ -90,8 +91,9 @@ body {
     grid-column: 1/2;
     grid-row: 1;
     text-transform: uppercase;
-    letter-spacing: 1.5px;
+    letter-spacing: 2.5px;
     font-weight: 800;
+    font-size: 13px;
     text-align: start;
 }
 
@@ -145,15 +147,16 @@ body {
 .price-container {
     grid-column: 2/3;
     grid-row: 1;
-    font-weight: 800;
     position: relative;
     text-align: end;
+    font-size: 16px;
 }
 .price{
     color: var(--dark-desaturated-blue);
     font-size: 38px;
+    font-weight:800;
     position: absolute;
-    right: 60px;
+    right: 68px;
     top: -16px;
 }
 
@@ -222,7 +225,7 @@ body {
     right: -100px;
 }
 hr{
-    border: var(--grayish-blue) solid 1px;
+    border: var(--lighter-grayish-blue) solid 1px;
     margin: 20px 0;
 }
 .card-bottom {
