--- a/styles.css
+++ b/styles.css
@@ -38,16 +38,15 @@ html, body {
 body {
     background-color: var(--very-pale-blue);
     text-align: center;
-    position: relative;
+    /* position: relative; */
     font-size: 15px;
-
 }
 
 .header {
     background-image: url("images/pattern-circles.svg"), url("images/bg-pattern.svg");
-    background-position: center,  left bottom;
+    background-position: center top 70px, left bottom;
     background-repeat: no-repeat, no-repeat;
-    padding: 10rem;
+    padding: 100px 0 275px;
 }
 
 .title h1 {
@@ -59,31 +58,35 @@ body {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    padding-top: 10px;
 }
 
 .card {
     display: flex;
     flex-direction: column;
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: calc(50% - 10.25rem);
+    /* position: absolute; */
+    /* right: 0; */
+    /* left: 0; */
+    /* top: calc(50% - 10.25rem); */
     border-radius: 10px;
     background-color: var(--white);
-    max-width: 540px;
-    max-height: 400px;
-    margin: 0 auto;
-    box-shadow: 10px 10px 10px lightgrey;
-    padding: 25px 0;
+    width: 540px;
+    height: 400px;
+    margin: -180px auto 50px;
+    box-shadow: 0 10px 10px 5px hsl(0deg 0% 94%);
+    padding: 30px 0;
 }
-.card-top,.card-bottom{
+
+.card-top, .card-bottom {
     width: 445px;
     align-self: center;
 }
+
 .card-top {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    height: 15rem;
+    grid-template-rows: 78px 56px 96px;
+    height: 230px;
     align-items: center;
 }
 
@@ -103,6 +106,18 @@ body {
     position: relative;
 }
 
+.range-filled {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 50%;
+    height: 8px;
+    border-radius: 5px;
+    background: var(--soft-cyan);
+}
+
 .price-range {
     position: absolute;
     top: 0;
@@ -111,37 +126,29 @@ body {
     right: 0;
     appearance: none;
     width: 100%;
-    height: 1rem;
+    height: 8px;
     border-radius: 5px;
     outline: none;
-    opacity: 0.7;
+    opacity: 1.0;
     background: var(--lighter-grayish-blue);
 }
 
 .price-range::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
-    width: 35px;
-    height: 35px;
-    border-radius: 15px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    box-shadow: 0px 15px 20px var(--soft-cyan);
+    position: sticky;
+    z-index: 1;
     cursor: pointer;
     background: var(--strong-cyan) url("images/icon-slider.svg") no-repeat center;
 }
 
 .hold::-webkit-slider-thumb {
-    background: red;
-}
-
-.range-filled {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 50%;
-    height: 1rem;
-    border-radius: 5px;
-    background: var(--soft-cyan);
+    background: hsl(174, 86%, 35%) url("images/icon-slider.svg") no-repeat center;
+    cursor: grab;
 }
 
 .price-container {
@@ -151,10 +158,11 @@ body {
     text-align: end;
     font-size: 16px;
 }
-.price{
+
+.price {
     color: var(--dark-desaturated-blue);
     font-size: 38px;
-    font-weight:800;
+    font-weight: 800;
     position: absolute;
     right: 68px;
     top: -16px;
@@ -185,9 +193,9 @@ body {
     padding: 0 3px;
     margin: 0px 15px;
 }
-.yearly_flg_toggle:checked{
+
+.yearly_flg_toggle:checked {
     background: var(--strong-cyan);
-    
 }
 
 /* .yearly_flg_toggle:before {
@@ -210,7 +218,8 @@ body {
     cursor: pointer;
     outline: none;
 }
-#yearly_flg:checked{
+
+#yearly_flg:checked {
     transform: translateX(21px);
 }
 
@@ -218,33 +227,112 @@ body {
     background-color: var(--light-grayish-red);
     color: var(--light-red);
     font-size: 10px;
-    padding: 5px;
+    padding: 2px 5px;
     margin: 0 5px;
     border-radius: 20px;
     position: absolute;
     right: -100px;
 }
-hr{
-    border: var(--lighter-grayish-blue) solid 1px;
-    margin: 20px 0;
+
+hr {
+    border: var(--lighter-grayish-blue) solid 0.1px;
+    opacity: 0.5;
+    margin-bottom: 25px;
 }
+
 .card-bottom {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
-.card-bottom *{
+
+.card-bottom * {
     font-size: 12px;
 }
-.card-bottom ul{
+
+.card-bottom ul {
     list-style-type: none;
     text-align-last: left;
 }
-button{
-    background:var(--dark-desaturated-blue);
-    width: 150px;
+
+.card-bottom li {
+    line-height: 2.4;
+}
+
+button {
+    background: var(--dark-desaturated-blue);
+    width: 170px;
     height: 40px;
     border-radius: 25px;
-    border:none;
-    color:var(--pale-blue);
+    border: none;
+    color: var(--pale-blue);
     cursor: pointer;
+}
+
+@media only screen and (max-width: 600px) {
+    body {
+        font-size: 13px;
+    }
+    .header{
+        background-position: center top 40px, left bottom;
+        padding: 75px 0 240px;
+    }
+    .title h1 {
+        color: var(--dark-desaturated-blue);
+        font-size: 21px;
+    }
+    .title-disc {
+        flex-direction: column;
+    }
+    .title-disc p {
+        padding-top: 5px;
+    }
+    .card {
+        width: 325px;
+        height: 480px;
+        padding: 33px 0;
+    }
+    .card-top, .card-bottom {
+        width: 290px;
+    }
+    .card-top {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: 59px 36px 92px auto;
+        height: 245px;
+        align-items: unset;
+    }
+    .pv-container, .price-range-container, .price-container, .billing {
+        grid-column: unset;
+        text-align: center;
+    }
+    .price-range-container {
+        grid-row: 2
+    }
+    .price-container {
+        grid-row: 3;
+    }
+    .price-container,.price{
+        position: unset;
+        right: unset;
+    top: unset;
+    }
+    .billing {
+        grid-row: 4;
+    }
+    .discount{
+        right: -45px;
+    }
+    .discount span{
+        display: none;
+    }
+    hr{
+        margin-bottom: 18px;
+    }
+    .card-bottom{
+        display: unset;
+    }
+    .card-bottom ul{
+        text-align-last:center;
+        padding-bottom: 26px;
+    }
 }
